# bookie

./: .dockerignore  .env  Dockerfile  Dockerfile-api  Dockerfile-mongo  Dockerfile-nginx  LICENSE  README.md  constants.tsx  docker-compose.test.yml  docker-compose.yml  jest.config.js  jest.config.ts  next.config.js  package-lock.json  package.json  pyproject.toml
app/: globals.css  layout.tsx  loading.tsx  page.tsx
app/bookings/: loading.tsx  page.tsx
app/login/: page.tsx
app/rooms/: BookingCard.tsx  page.tsx
app/rooms/[id]/: loading.tsx  (+1 more)
bookie/: __init__.py  __main__.py  constants.py  exceptions.py  messages.py  openapi.py
bookie/app/: __init__.py  models.py  utils.py
components/: BookingCard.tsx  DatePicker.tsx  Errors.tsx  HeaderTabs.tsx  Loading.tsx  MobileHeaderTabs.tsx  NavBar.tsx  PhotoCarousel.tsx  ProfileMenu.tsx  SelectTimeSlots.tsx  Timeline.tsx  TimelineItem.tsx
contexts/: BookingContext.tsx  RoomContext.tsx  UserContext.tsx
docs/: openapi.json  openapi.yaml
hooks/: auth.tsx  bookings.tsx  errors.tsx  rooms.tsx
libs/: bookings.tsx  passwords.tsx  rest.tsx  utils.tsx
mocks/: bookings.json  bookingsTimeSensitive.json  rooms.json  user.json
mongo/: bookie.js  mongod.conf
nginx/: nginx.conf
nginx/conf.d/: bookie.conf
postman/: Bookie.postman_collection.json
postman/environments/: Docker.postman_environment.json  Local.postman_environment.json
tests/app/: page.test.tsx
tests/components/: BookingCard.test.tsx
tests/libs/: bookings.test.ts  bookings.test.tsx  passwords.test.tsx  rest.test.tsx  utils.test.ts  utils.test.tsx
(+13 files in other folders)
