[tool.poetry]
name = "bookie"
version = "1.0.0"
description = "Holds all backend source code"
authors = ["David Lee <ltw_david@u.nus.edu>"]
exclude = [ "tests", ]
packages = [
    { include = "bookie" },
]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
motor = "^3.1.1"
fastapi = "^0.88.0"
uvicorn = { version = "^0.20.0", extras = ["standard"] }
pytz = "^2022.7"
fastapi-versioning  = "^0.10.0"
aiofiles = "^22.1.0"
email-validator = "^1.3.1"

[tool.poetry.dev-dependencies]
asynctest = "^0.13.0"
PyInstaller = { version = "^4.10", extras = ["encryption"] }
behave = "^1.2.6"
requests = "^2.27.1"
websockets = "^10.3"
pymongo = ">4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
